[package]
name = "boomerang"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "boomerang"
path = "src/main.rs"



[dependencies]
candid = "0.10"
ic-cdk = "0.13"
icp-ledger = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
ic-base-types = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic/", rev = "7eace38b7580dc35af53b9180ea40480af4977dc" }
minicbor = { version = "0.24.2", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
serde = "1.0.203"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = "1.0.120"
sha2 = "0.10.8"
ic-canister-log = "0.2.0"

[dev-dependencies]
candid_parser = "0.1.4"